# cloud-printer

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs  main_old.rs  upload.html
backend/templates/: hello.html  upload.html
frontend/cloud_printer/: README.md  pubspec.yaml
frontend/cloud_printer/android/app/: build.gradle
frontend/cloud_printer/android/app/src/main/: AndroidManifest.xml
frontend/cloud_printer/android/app/src/main/kotlin/com/example/cloud_printer/: MainActivity.kt
frontend/cloud_printer/ios/Runner/: Info.plist
frontend/cloud_printer/ios/Runner.xcodeproj/: project.pbxproj
frontend/cloud_printer/lib/: expandable_fab.dart  front_page.dart  main.dart  multipart_send.dart
frontend/cloud_printer/linux/: CMakeLists.txt  my_application.cc
frontend/cloud_printer/macos/Runner.xcodeproj/: project.pbxproj
frontend/cloud_printer/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/cloud_printer/macos/Runner/Configs/: AppInfo.xcconfig
frontend/cloud_printer/test/: widget_test.dart
frontend/cloud_printer/web/: index.html  manifest.json
frontend/cloud_printer/windows/: CMakeLists.txt
frontend/cloud_printer/windows/runner/: Runner.rc  main.cpp
